# minecraft

./: .gitignore  CMakeLists.txt
assets/scripts/: world.lua
assets/shaders/: crosshair.frag  crosshair.vert  fragment.glsl  screen.frag  screen.vert  world.vert
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
lua/: CMakeLists.txt
src/: camera.h  generation.cpp  generation.h  main.cpp  world.cpp  world.h
src/engine/: scripts.cpp  scripts.h
src/renderer/: arrays.cpp  arrays.h  buffers.cpp  buffers.h  models.cpp  models.h  shaders.cpp  shaders.h  textures.cpp  textures.h
